# basic_neural_network

./: .gitignore  main.cpp  meson.build
fonts/: meson.build
shaders/: meson.build
src/: network.hpp  network_drawer.hpp  network_trainer.hpp
subprojects/: glfwe.wrap  logger.wrap
